--- a/src/styles/nav-bar/sub_menu.css
+++ b/src/styles/nav-bar/sub_menu.css
@@ -14,21 +14,23 @@
     transition-duration: .5s;
     padding: 3px;
 }
-.sub-menu-dropdown:hover {
-    cursor: default;
-}
 
 .sub-menu-block {
-    position: absolute;
+    position: fixed;
     left: 0;
-    top: 100%;
     width: 100vw;
     min-height: 5vh;
-    max-height: 30vh;
+    max-height: 40vh;
     height: fit-content;
     background-color: white;
     box-shadow: 0px 5px 7px lightgrey;
     transform: scaleY(0);
     transform-origin: top center;
     transition-duration: .5s;
+    overflow-y: auto;
+    padding: 3px;
+}
+
+.sub-menu:hover {
+    cursor: default;
 }
