edit css to fit nav-bar-item or sub-menu-item of type Link

--- a/src/styles/nav-bar/sub_menu_item.css
+++ b/src/styles/nav-bar/sub_menu_item.css
@@ -1,5 +1,8 @@
 .sub-menu-item {
     font-size: 17px;
+    text-decoration: none;
+    color: black;
+    box-sizing: border-box;
 }
 
 .sub-menu-item:hover {
