--- a/src/styles/nav-bar/nav_bar_item.css
+++ b/src/styles/nav-bar/nav_bar_item.css
@@ -1,19 +1,23 @@
 .nav-bar-item {
-
+    /* basic style */
     height: 44px;
     line-height: 44px;
     width: fit-content;
     padding: 0px 7px;
     margin: 0px 5px;
     color: black;
+    text-decoration: none;
     font-size: 20px;
     float: left;
     position: relative;
+    box-sizing: border-box;
 
+    /* disable user select */
     user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
 
+    /* background effect */
 	background: linear-gradient(to left, rgba(0,0,0,0) 50%, black 50%);
     background-size: 200% 5px;
     background-position: bottom 0 right 1px;
