--- a/src/styles/nav-bar/sub_menu_item.css
+++ b/src/styles/nav-bar/sub_menu_item.css
@@ -32,3 +32,26 @@
     border-radius: 5px;
     vertical-align: top;
 }
+
+@media screen and (max-width: 1200px) {
+
+    .sub-menu-block .sub-menu-item,
+    .sub-menu-dropdown .sub-menu-item {
+        display: block;
+        width: calc(100% - 10px);
+        padding: 5px 10px;
+        margin: 5px;
+        min-width: unset;
+        max-width: unset;
+        min-height: unset;
+        max-height: unset;
+        text-align: left;
+        border: unset;
+        font-size: 17px;
+        height: fit-content;
+    }
+
+    .sub-menu-item:nth-child(odd) {
+        background-color: rgb(233, 233, 233);
+    }
+}
