--- a/src/styles/account/login.css
+++ b/src/styles/account/login.css
@@ -1,3 +1,72 @@
 .login {
-	
+	width: 100%;
+    height: 93%;
+    padding-top: 15vh;
+}
+
+.login input,
+.login button {
+    display: block;
+    position: relative;
+    margin: auto;
+    margin-bottom: 30px;
+    width: 30%;
+    height: 50px;
+    padding: 0px 10px;
+    border-radius: 15px;
+    border: 2px solid grey;
+    font-size: 20px;
+    z-index: 1;
+    box-sizing: border-box;
+}
+
+.login input:focus {outline: none;}
+
+.login .change-visibility-icon {
+    position: absolute;
+    z-index: 2;
+    width: 30px;
+    height: 30px;
+    left: calc(65% - 40px);
+    margin-top: 10px;
+}
+
+.login button {
+    color: white;
+    background-color: dodgerblue;
+    margin-bottom: 10px;
+}
+
+.login button:hover {
+    background-color: rgb(26, 125, 224);
+}
+
+.login span {
+    display: block;
+    text-align: center;
+    font-size: medium;
+    color: blue;
+}
+
+.login button:hover,
+.login span:hover,
+.login .change-visibility-icon:hover {
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1023px) {
+    .login input,
+    .login button {
+        width: 80%;
+        font-size: 17px;
+    }
+
+    .login .change-visibility-icon {
+        left: calc(90% - 40px);
+    }
+
+    .login span {
+        width: 55%;
+        margin: auto;
+    }
 }
