--- a/src/styles/account/register.css
+++ b/src/styles/account/register.css
@@ -1,3 +1,48 @@
 .register {
 	padding-top: 10vh;
 }
+
+.register .with-strength {
+    margin-bottom: 5px;
+}
+
+.register .password-strength {
+    width: calc(30% - 10px);
+    position: relative;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.register .password-strength span {
+    display: inline-block;
+    width: 25%;
+    height: 3px;
+    transition-duration: .5s;
+}
+.register .password-strength span:hover {cursor: default;}
+
+.register .password-strength .empty {
+    background-color: grey;
+}
+
+.register .password-strength .danger {
+    background-color: red;
+}
+
+.register .password-strength .weak {
+    background-color: gold;
+}
+
+.register .password-strength .normal {
+    background-color: dodgerblue;
+}
+
+.register .password-strength .strong {
+    background-color: limegreen;
+}
+
+@media screen and (max-width: 1023px) {
+    .register .password-strength {
+        width: 80%;
+    }
+}
