fix style to only click on text not the whole line

--- a/src/styles/account/login.css
+++ b/src/styles/account/login.css
@@ -47,6 +47,8 @@
     text-align: center;
     font-size: medium;
     color: blue;
+    width: fit-content;
+    margin: auto;
 }
 
 .login button:hover, .register button:hover,
