--- a/src/styles/account/account_details.css
+++ b/src/styles/account/account_details.css
@@ -1,3 +1,87 @@
 .account-details {
-	
+	width: 30%;
+    height: fit-content;
+    min-height: 90%;
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 5vh 3% 0 3%;
+    position: relative;
+}
+
+.account-details .avatar {
+    width: 130px;
+    height: 130px;
+    border-radius: 130px;
+    border: 2px solid black;
+    text-align: center;
+    background-size: 100%;
+    background-position: center;
+    margin: auto;
+}
+
+.account-details .avatar .icon {
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin-left: 14px;
+    margin-top: 10px;
+}
+
+.account-details .detail {
+    width: 90%;
+    height: 50px;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 20px;
+    line-height: 50px;
+    text-align: center;
+    position: relative;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.account-details .detail:is(.first) {
+    margin-top: 40px;
+}
+
+.account-details .detail-title {
+    position: absolute;
+    left: 0;
+    width: 70%;
+    background-image: linear-gradient(to right, rgb(160, 160, 160) 35%, transparent);
+    color: white;
+    text-align: left;
+    padding-left: 10%;
+    border-radius: 10px 30px 30px 10px;
+    transform: scaleX(0);
+    transform-origin: left center;
+    transition-duration: .3s;
+}
+
+.account-details .detail:hover .detail-title {
+    transform: scaleX(100%);
+}
+
+/* 
+   use a container to keep logout button center, 
+   and only logout button can be clicked, 
+   not the whole line  
+*/
+.account-details .logout-container {
+    color: blue;
+    position: absolute;
+    bottom: 5vh;
+    width: 80%;
+    text-align: center;
+}
+
+.account-details .logout {
+    margin: auto;
+    width: fit-content;
+}
+
+.account-details .detail:not(.no-edit):hover,
+.account-details .logout:hover {
+    cursor: pointer;
 }
