update style for input

--- a/src/styles/account/account_details.css
+++ b/src/styles/account/account_details.css
@@ -39,6 +39,15 @@
     position: relative;
     font-size: 20px;
     font-weight: 400;
+    box-sizing: border-box;
+    display: block;
+}
+
+.account-details .detail:is(input):hover {
+    cursor: default !important;
+}
+.account-details .detail:is(input):focus {
+    outline: none;
 }
 
 .account-details .detail:is(.first) {
