--- a/src/styles/account/edit_avatar.css
+++ b/src/styles/account/edit_avatar.css
@@ -51,9 +51,14 @@
     background-color: rgba(0,0,0,.3);
 }
 
+.upload-edit-avatar .page .ask-avatar {
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+
 .upload-edit-avatar .page .ask-avatar span {
     margin: 100px 30px;
-    text-align: center;
     color: white;
     font-size: 30px;
     display: block;
@@ -64,10 +69,10 @@
     opacity: 0;
 }
 
-.upload-edit-avatar .page img {
-    width: fit-content;
+.upload-edit-avatar .page .ask-avatar img {
     max-width: 100%;
     max-height: 100%;
+    margin: auto;
 }
 
 .upload-edit-avatar .page .btn {
