remove className:hover changed cursor, use global className clickable instead

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ form {
     overflow: hidden auto;
 }
 
+.clickable:hover {cursor: pointer;}
+
 @media screen and (max-width: 1023px) {
     .main-viewport {
         height: 100vh;
