--- a/src/styles/account/edit_password.css
+++ b/src/styles/account/edit_password.css
@@ -1,3 +1,8 @@
-.edit-password {
-	
+.edit-password .info-span {
+    width: 30vw;
+    display: block;
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 17px;
 }
