implement home page design

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,52 @@
-.home {
-	
+.main-viewport:has(.home) {
+    background-image: url('/src/media/background.jpeg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+}
+
+.main-viewport:has(.home) .declaimer {
+    color: white;
+    position: sticky;
+    bottom: 0;
+    padding: 10px;
+    backdrop-filter: blur(6px);
+}
+
+.home section {
+    width: 100%;
+    height: calc(var(--main-viewport-height) - 50px);
+    display: flex;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+}
+
+.home section .section-text-box {
+    display: block;
+    color: white;
+    width: fit-content;
+    height: fit-content;
+    min-width: 500px;
+    max-width: 55%;
+    min-height: 300px;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 1px 5px 15px lightgray;
+    text-align: center;
+    backdrop-filter: blur(6px);
+    margin: auto;
+    box-sizing: border-box;
+}
+.home section .title {
+    font-size: 30px;
+    font-weight: 500;
+    text-shadow: 2px 2px 3px gray;
+}
+
+.home section .content {
+    font-size: 20px;
+    font-weight: 400px;
+    margin-top: 10px;
 }
