change background to webp to save space

--- a/src/styles/home-page/home.css
+++ b/src/styles/home-page/home.css
@@ -1,5 +1,5 @@
 .main-viewport:has(.home) {
-    background-image: url('/src/media/background.jpeg');
+    background-image: url('/src/media/background.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
