--- a/src/styles/popup/popup_style.css
+++ b/src/styles/popup/popup_style.css
@@ -1,16 +1,4 @@
-.popup-window-container {
-	position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    z-index: -1;
-}
-
-.popup-window-container .popup-window {
+.styled-popup-content {
     --btn-width: 150px;
     --btn-height: 40px;
     --btn-margin: 10px;
@@ -18,8 +6,6 @@
     width: fit-content;
     height: fit-content;
     min-width: calc((var(--btn-width) * 2) + (var(--btn-margin) * 4));
-    transform: scale(0);
-    transform-origin: center;
     transition-duration: .3s;
     position: relative;
     margin: auto;
@@ -30,7 +16,7 @@
     display: block;
 }
 
-.popup-window-container .popup-window .popup-btn {
+.styled-popup-content .popup-btn {
     width: var(--btn-width);
     height: var(--btn-height);
     margin: var(--btn-margin);
@@ -44,7 +30,7 @@
     line-height: var(--btn-height);
 }
 
-.popup-window-container .popup-window .display-content {
+.styled-popup-content .display-content {
     padding: 10px;
     min-height: 40px;
     max-width: 35vw;
@@ -53,9 +39,9 @@
     overflow: hidden auto;
 }
 
-.popup-window-container .popup-window .blue-btn {
+.styled-popup-content .blue-btn {
     background-color: dodgerblue;
 }
-.popup-window-container .popup-window .red-btn {
+.styled-popup-content .red-btn {
     background-color: red;
 }
