--- a/src/styles/popup/popup_style.css
+++ b/src/styles/popup/popup_style.css
@@ -48,7 +48,7 @@
     background-color: red;
 }
 
-.styled-popup-content input:not(input[type="submit"]) {
+.styled-popup-content .input-type {
     display: block;
     width: calc(var(--content-min-width) - 20px);
     margin: 0px 10px;
@@ -59,8 +59,12 @@
     box-sizing: border-box;
 }
 
-.styled-popup-content input:not(input[type="submit"]):focus {
+.styled-popup-content .input-type:focus {
     outline: none;
+}
+
+.styled-popup-content .input-type.content-invalid {
+    border-color: red;
 }
 
 .styled-popup-content .input-block {
@@ -73,7 +77,7 @@
     margin-bottom: 5px;
 }
 
-.styled-popup-content .input-block input:not(input[type="submit"]) {
+.styled-popup-content .input-block .input-type {
     margin: unset;
     width: 100%;
 }
