--- a/src/styles/popup/popup_style.css
+++ b/src/styles/popup/popup_style.css
@@ -30,6 +30,7 @@
     display: inline-block;
     line-height: var(--btn-height);
     border: unset;
+    user-select: none;
 }
 
 .styled-popup-content .display-content {
